[package]
name = "renderwalk"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Adel Ayoub"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simple_logger = "4.1.0"
sdl2 = { version = "0.35.2", features = ["gfx"] }
cgmath = "0.18.0"
